# sysmon

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall-extension.sh
gnome-extension/: extension.js  metadata.json
gnome-extension-42/: extension.js  metadata.json
