[project]
name = "sysmon"
version = "0.2.0"
description = "Real-time CPU, GPU, and RAM monitoring for Linux with rolling usage plots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-ml-py3",
    "pynvml",
    "matplotlib",
    "Pillow",
    "PyGObject",
    "psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
